# docs/swagger.yaml
@@ -3,6 +3,14 @@ definitions:
     properties:
       access_token:
         type: string
+      access_token_expires_at:
+        type: string
+      refresh_token:
+        type: string
+      refresh_token_expires_at:
+        type: string
+      session_id:
+        type: string
       user:
         $ref: '#/definitions/api.userResponse'
     type: object
